--- a/kashtak_city_shop/main/templates/layout/base.html
+++ b/kashtak_city_shop/main/templates/layout/base.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>{% block title %}Design.Pro{% endblock %}</title>
+    <title>{% block title %}Kashtak City{% endblock %}</title>
     {% bootstrap_css %}
     {% bootstrap_javascript jquery='slim' %}
 </head>
